--- a/slides-github.Rmd
+++ b/slides-github.Rmd
@@ -62,7 +62,7 @@ class: middle, center, inverse
 
 
 
-# .white[GitHub]
+# .white[Git and GitHub]
 
 <br>
 
@@ -86,7 +86,7 @@ class: middle, center, inverse
 
 * Workshop simulation ideas.
 
-
+([This slide deck](https://harvard-stat98.github.io/materials/slides-github.html#1) and the [Rmd](https://github.com/harvard-stat98/materials/blob/master/slides-github.Rmd) that generated the slide deck can be found [here](https://github.com/harvard-stat98/materials).)
 
 ---
 
